# invoicesProject

./: README.md  database.py  main.py  pyproject.toml  sql_app.db
crud/: manual_invoices.py  users.py
manual_invoices/models/: manual_invoices.py
models/: manual_invoices.py  users.py
schemas/: manual_invoices.py  users.py
users/models/: users.py
users/routes/: users.py
users/schemas/: users.py
webscraping/: scraping.py
